--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "core-js": "^3.8.3",
+    "daisyui": "^5.0.6",
+    "sweetalert2": "^11.17.2",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue-sweetalert2": "^5.0.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
